--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="item"
+            type="com.santaistiger.gomourdeliveryapp.data.model.Store" />
+    </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -17,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingHorizontal="5dp">
 
             <ImageView
                 android:id="@+id/iv_stopover"
@@ -25,44 +30,43 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_launcher_background" />
+                android:padding="8dp"
+                app:srcCompat="@drawable/store" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="6"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingVertical="5dp" >
 
-                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                    android:id="@+id/tv_stopover_address"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_store_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:textSize="14dp"
-                    tools:text="경유지" />
+                    android:text="@{item.place.getDisplayName}"
+                    android:layout_marginBottom="5dp"
+                    tools:text="가게 도로명 주소 (가게명)" />
 
-                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                    android:id="@+id/tv_menu"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/et_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
+                    android:background="#00000000"
                     android:textSize="14dp"
-                    tools:text="상품명" />
-
+                    android:text="@{item.menu}"
+                    tools:text="메뉴 메뉴 메뉴 메뉴 메뉴 \n메뉴 메뉴 메뉴 메뉴" />
             </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/ib_delete_item"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_input_price"
                 android:layout_width="0dp"
+                android:layout_weight="1.5"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:paddingHorizontal="10dp"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ic_launcher_background" />
-
+                android:hint="가격\n입력"
+                android:text="@{item.cost.toString()}"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</layout>
