--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -18,37 +18,6 @@
         android:paddingVertical="10dp"
         android:paddingHorizontal="15dp" >
 
-        <!-- 상단 레이아웃 - 햄버거 버튼 / 제목 -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:paddingHorizontal="5dp" >
-
-            <ImageButton
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/hamburger_btn"
-                android:background="#00000000"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/title_do_order_fragment"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <!-- 스크롤 - 지도 / 정보 확인칸 / 연락 버튼 -->
         <ScrollView
             android:layout_width="match_parent"
@@ -69,6 +38,23 @@
                     tools:background="#55555555"
                     android:layout_marginBottom="10dp" >
                 </LinearLayout>
+
+                <!-- 배달 시간간 -->
+               <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="10dp" >
+
+                    <TextView
+                        android:id="@+id/tv_delivery_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18dp"
+                        android:textColor="@color/black"
+                        bind_delivery_time="@{viewModel.order}"
+                        tools:text="2021-03-29 13:24 도착 예정" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <!-- 출발지 및 목적지 -->
                 <androidx.appcompat.widget.LinearLayoutCompat
