--- a/app/src/main/res/layout/item_destination.xml
+++ b/app/src/main/res/layout/item_destination.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="item"
             type="com.santaistiger.gomourdeliveryapp.data.model.Place" />
+
         <variable
             name="viewModel"
             type="com.santaistiger.gomourdeliveryapp.ui.orderdetail.OrderDetailViewModel" />
@@ -24,10 +25,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="5dp"
+            android:layout_marginVertical="5dp"
             android:gravity="center_vertical"
-            android:layout_marginVertical="5dp" >
+            android:orientation="horizontal"
+            android:paddingHorizontal="5dp">
 
             <ImageView
                 android:id="@+id/iv_stopover"
@@ -43,9 +44,9 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="6"
-                android:textSize="14dp"
                 android:gravity="center_vertical"
                 android:text="@{item.getDisplayName}"
+                android:textSize="14dp"
                 tools:text="도착주소주소\n도착 주소를 주소" />
 
 
@@ -53,13 +54,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_pickup_complete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="0dp"
                     android:hint="픽업 완료"
-                    android:onClick="@{() -> viewModel.onPickupCompleteBtnClick()}"/>
+                    android:onClick="@{() -> viewModel.onPickupCompleteBtnClick()}"
+                    android:padding="0dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_delivery_complete"
@@ -67,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="배달 완료"
-                    android:onClick="@{() -> viewModel.onDeliveryCompleteBtnClick()}"/>
+                    android:onClick="@{() -> viewModel.onDeliveryCompleteBtnClick()}" />
             </LinearLayout>
 
         </LinearLayout>
