--- a/app/src/main/res/layout/item_price.xml
+++ b/app/src/main/res/layout/item_price.xml
@@ -3,12 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="price"
-            type="Integer" />
-    </data>
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,8 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#00000000"
-                android:textSize="14dp"
-                android:text="@{price.toString()}"/>
+                android:textSize="14dp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
