--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -50,9 +50,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:textSize="24dp"
-                        android:gravity="right"
-                        tools:text="13:24 도착 예정" />
+                        android:textSize="18dp"
+                        tools:text="2021-03-29 (금) 13:24 도착 예정" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <!-- 출발지 및 목적지 -->
