기능 대강 완료

--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.santaistiger.gomourdeliveryapp.ui.orderdetail.OrderDetailViewModel" />
+            type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderDetailViewModel" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
