--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="orderListViewModel"
-            type="com.santaistiger.gomourdeliveryapp.ui.orderlist.OrderListViewModel" />
+            type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderListViewModel" />
     </data>
 
     <LinearLayout
