--- a/app/src/main/res/layout/fragment_modify_user_info.xml
+++ b/app/src/main/res/layout/fragment_modify_user_info.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.orderdetail.OrderDetailFragment" >
+        tools:context=".ui.view.OrderDetailFragment" >
 
         <TextView
             android:id="@+id/nameModify"
