--- a/app/src/main/res/layout/item_destination.xml
+++ b/app/src/main/res/layout/item_destination.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.santaistiger.gomourdeliveryapp.ui.orderdetail.OrderDetailViewModel" />
+            type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderDetailViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
