--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,47 +10,64 @@
             type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderDetailViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp">
+        android:layout_marginBottom="15dp" >
 
         <!-- 스크롤 - 지도 / 정보 확인칸 / 연락 버튼 -->
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/container_contact"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="10dp"
+                android:paddingHorizontal="15dp" >
 
                 <!-- 지도 -->
-                <LinearLayout
-                    android:id="@+id/map_view"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical"
-                    tools:background="#55555555" />
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginHorizontal="5dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    tools:foreground="#55555555">
+
+                    <FrameLayout
+                        android:id="@+id/map_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical" />
+                </androidx.cardview.widget.CardView>
 
                 <!-- 배달 시간 -->
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical">
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_delivery_time"
-                        bind_delivery_time="@{viewModel.order}"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        bind_detail_delivery_time="@{viewModel.order}"
+                        android:layout_width="0dp"
+                        android:layout_weight="4"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:fontFamily="@font/nsregular"
                         android:textColor="@color/black"
-                        android:textSize="18dp"
+                        android:textSize="17dp"
                         tools:text="2021-03-29 (금) 13:24 도착 예정" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -57,30 +75,33 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="25dp"
                     android:orientation="vertical">
 
                     <!-- 제목 -->
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="5dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="@font/nsbold"
                         android:text="@string/address_do_order_fragment"
                         android:textColor="@color/black"
-                        android:textSize="16dp" />
+                        android:textSize="17dp" />
 
                     <!-- 가게 -->
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_store"
-                        bind_store_list="@{viewModel.order}"
+                        bind_detail_store_list="@{viewModel.order}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clipToPadding="false"
                         android:nestedScrollingEnabled="false" />
 
                     <!-- 목적지 -->
-                    <com.santaistiger.gomourdeliveryapp.ui.customview.DestinationView
+                    <com.santaistiger.gomourdeliveryapp.ui.customview.DetailDestinationView
                         android:id="@+id/cv_destination"
-                        bind_destination="@{viewModel.order}"
+                        bind_detail_destination="@{viewModel.order}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -89,22 +110,25 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="25dp"
                     android:orientation="vertical">
 
                     <!-- 제목 -->
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="@font/nsbold"
                         android:paddingLeft="5dp"
                         android:text="@string/message_do_order_fragment"
                         android:textColor="@color/black"
-                        android:textSize="16dp" />
+                        android:textSize="17dp" />
 
                     <!-- 메시지 -->
-                    <com.santaistiger.gomourdeliveryapp.ui.customview.MessageView
+                    <com.santaistiger.gomourdeliveryapp.ui.customview.DetailMessageView
                         android:id="@+id/cv_message"
-                        bind_message="@{viewModel.order}"
+                        bind_detail_message="@{viewModel.order}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -120,37 +144,62 @@
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="@font/nsbold"
                         android:paddingLeft="5dp"
                         android:text="@string/price_do_order_fragment"
                         android:textColor="@color/black"
-                        android:textSize="16dp" />
+                        android:textSize="17dp" />
 
                     <!-- 가격 -->
-                    <com.santaistiger.gomourdeliveryapp.ui.customview.PriceView
+                    <com.santaistiger.gomourdeliveryapp.ui.customview.DetailPriceView
                         android:id="@+id/cv_price"
-                        bind_price="@{viewModel.order}"
+                        bind_detail_price="@{viewModel.order}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_call_customer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:onClick="@{() -> viewModel.onCallBtnClick()}"
-                    android:text="주문자에게 전화하기" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_text_customer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:onClick="@{() -> viewModel.onTextBtnClick()}"
-                    android:text="주문자에게 문자하기" />
-
             </LinearLayout>
         </ScrollView>
 
+        <!-- 배달기사에게 전화/문자하기 버튼 -->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/container_contact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_call_customer"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/shape_bottom_btn"
+                android:fontFamily="@font/nsbold"
+                android:onClick="@{() -> viewModel.onCallBtnClick()}"
+                android:text="배달 기사에게 전화하기"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_text_customer"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/shape_bottom_btn"
+                android:fontFamily="@font/nsbold"
+                android:onClick="@{() -> viewModel.onTextBtnClick()}"
+                android:text="배달 기사에게 문자하기"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
