디자인 적용

--- a/app/src/main/res/layout/item_order_request_destination.xml
+++ b/app/src/main/res/layout/item_order_request_destination.xml
@@ -20,6 +20,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:padding="8dp"
+                android:tint="@color/main"
                 app:srcCompat="@drawable/destination" />
 
             <androidx.appcompat.widget.AppCompatTextView
