--- a/app/src/main/res/drawable/confirm_button.xml
+++ b/app/src/main/res/drawable/confirm_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#d6d7d7" />
+    <solid android:color="@color/main" />
     <corners android:radius="7dp"/>
 </shape>
