--- a/app/src/main/res/layout/fragment_modify_user_info.xml
+++ b/app/src/main/res/layout/fragment_modify_user_info.xml
@@ -7,88 +7,135 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.view.OrderDetailFragment" >
+        android:padding="7dp"
+        tools:context=".ui.view.OrderDetailFragment">
 
         <TextView
             android:id="@+id/nameModify"
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext_unmodifiable"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/emailModify"
             android:layout_width="match_parent"
-            android:layout_height="37dp" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext_unmodifiable"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:textSize="14dp" />
 
         <EditText
             android:id="@+id/passwordModify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edittext"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:hint="@string/password_star"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:textSize="14dp" />
 
         <EditText
             android:id="@+id/passwordCheckModify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edittext"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:hint="@string/password_star"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/passwordModifyValid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="비밀번호 변경 시에만 입력하세요"
-            android:textColor="#F44336" />
+            android:paddingLeft="5dp"
+            android:text="@string/modify_password_info"
+            android:textColor="#F44336"
+            android:textSize="14dp" />
 
         <EditText
             android:id="@+id/phoneModify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/edittext"
             android:ems="10"
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:paddingLeft="15dp"
+            android:textSize="14dp" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:id="@+id/modifyAccountLinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="38dp">
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext">
 
             <EditText
                 android:id="@+id/bankModify"
-                android:layout_width="137dp"
-                android:layout_height="39dp"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:background="@null"
                 android:ems="10"
                 android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.009"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                android:paddingLeft="15dp"
+                android:textSize="14dp" />
 
             <EditText
                 android:id="@+id/accountModify"
-                android:layout_width="254dp"
-                android:layout_height="40dp"
+                android:layout_width="228dp"
+                android:layout_height="match_parent"
+                android:background="@null"
                 android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.862"
-                app:layout_constraintStart_toEndOf="@+id/bankModify"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:inputType="number"
+                android:padding="10dp"
+                android:textSize="14dp" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/withdrawalButton"
-            android:layout_width="106dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="회원탈퇴" />
-
-        <Button
-            android:id="@+id/modifyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="완료" />
+            android:layout_gravity="right"
+            android:text="@string/withdrwal_button"
+            android:textAlignment="viewEnd"
+            android:textSize="14dp"
+            tools:ignore="RtlCompat" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/modifyButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/confirm_button"
+                android:text="완료"
+                android:textColor="@color/white"
+                android:textSize="14dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </LinearLayout>
 
