--- a/app/src/main/res/layout/item_order_request_store.xml
+++ b/app/src/main/res/layout/item_order_request_store.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:padding="8dp"
+            android:tint="@color/main"
             app:srcCompat="@drawable/store" />
 
         <LinearLayout
