--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -19,11 +19,11 @@
 
             <TextView
                 android:id="@+id/toolbar_title"
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                style="@style/je_toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="회원가입" />
+                android:text="@string/toolbar_title_join" />
         </androidx.appcompat.widget.Toolbar>
 
         <EditText
