--- a/app/src/main/res/layout/item_get_order_status_switch.xml
+++ b/app/src/main/res/layout/item_get_order_status_switch.xml
@@ -6,6 +6,7 @@
 
     <Switch
         android:id="@+id/get_order_status_switch"
+        android:theme="@style/je_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
