--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#0188BF</color>
     <color name="background_color">#FAFAFA</color>
+    <color name="list_ic_color">#2F6FA9</color>
 </resources>
