코루틴 적용 및 파일 정리

--- a/app/src/main/res/layout/fragment_modify_user_info.xml
+++ b/app/src/main/res/layout/fragment_modify_user_info.xml
@@ -67,6 +67,7 @@
             android:ems="10"
             android:inputType="phone"
             android:paddingLeft="15dp"
+            android:maxLength="11"
             android:textSize="14dp" />
 
         <LinearLayout
