--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -84,7 +84,6 @@
                 android:id="@+id/emailCheckButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:enabled="false"
                 android:gravity="center"
                 android:text="중복확인"
                 android:textColor="@color/main" />
@@ -95,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:visibility="gone" />
 
         <EditText
