주문 받기, 로그인, 회원가입, 회원정보수정 리팩토링 및 디자인 적용

--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -29,12 +29,12 @@
 
         <TextView
             android:id="@+id/app_version"
+            style="@style/gs_text_regular_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/nsregular"
+            android:paddingHorizontal="128dp"
             android:text="@string/app_version"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
     <LinearLayout
