--- a/app/src/main/res/layout/fragment_order_request.xml
+++ b/app/src/main/res/layout/fragment_order_request.xml
@@ -1,6 +1,5 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,23 +8,23 @@
         android:paddingHorizontal="8dp"
         android:paddingTop="8dp">
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/orderrquest_round"
             android:orientation="vertical"
             android:padding="7dp">
 
             <TextView
                 android:id="@+id/or_title"
+                style="@style/gs_text_bold_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
                 android:text="@string/order_request_title"
                 android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:id="@+id/or_stores"
@@ -36,22 +35,36 @@
             <com.santaistiger.gomourdeliveryapp.ui.customview.OrderRequest_DestinationView
                 android:id="@+id/or_destination"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_height="wrap_content"></com.santaistiger.gomourdeliveryapp.ui.customview.OrderRequest_DestinationView>
 
-            </com.santaistiger.gomourdeliveryapp.ui.customview.OrderRequest_DestinationView>
-
-
-            <TextView
-                android:id="@+id/or_deliveryCharge"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:gravity="end"
-                android:padding="2dp"
-                android:text="금액"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingVertical="15dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    android:id="@+id/or_deliveryCharge"
+                    style="@style/gs_text_regular_13"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:gravity="right"
+                    android:text="금액"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    style="@style/gs_text_regular_13"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="원"
+                    android:textSize="16dp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,31 +73,29 @@
 
                 <Button
                     android:id="@+id/nobutton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_round"
-                    android:text="@string/order_request_no" />
+                    android:layout_weight="8"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/nsbold"
+                    android:text="@string/order_request_no"
+                    android:textColor="@color/main" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/yesbutton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_round"
-                    android:text="@string/order_request_yes" />
+                    android:layout_weight="8"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/nsbold"
+                    android:text="@string/order_request_yes"
+                    android:textColor="@color/main" />
             </LinearLayout>
-
         </LinearLayout>
-
     </LinearLayout>
-
 </layout>
