--- a/app/src/main/res/layout/item_order_request_destination.xml
+++ b/app/src/main/res/layout/item_order_request_destination.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/or_destination_img"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:paddingHorizontal="10dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/destination"
+            app:tint="@color/main" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/or_destination_address"
+            style="@style/gs_text_regular_14"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingHorizontal="5dp">
-
-            <ImageView
-                android:id="@+id/or_destination_img"
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:padding="8dp"
-                android:tint="@color/main"
-                app:srcCompat="@drawable/destination" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/or_destination_address"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="6"
-                android:gravity="center_vertical"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                tools:text="도착주소주소\n도착 주소를 주소" />
-        </LinearLayout>
-
+            android:layout_weight="6"
+            android:paddingVertical="5dp"
+            android:textSize="15dp"
+            tools:text="도착주소주소\n도착 주소를 주소" />
+    </LinearLayout>
 </layout>
