--- a/app/src/main/res/layout/item_order_request_store.xml
+++ b/app/src/main/res/layout/item_order_request_store.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -7,19 +6,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:paddingHorizontal="5dp">
 
         <ImageView
             android:id="@+id/or_store_img"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:padding="8dp"
-            android:tint="@color/main"
-            app:srcCompat="@drawable/store" />
+            android:paddingHorizontal="10dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/store"
+            app:tint="@color/main" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -31,21 +31,23 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/or_store_address"
+                style="@style/gs_text_regular_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:textSize="14dp"
-                android:textStyle="bold"
+                android:paddingTop="5dp"
+                android:textSize="15dp"
                 tools:text="가게 도로명 주소 (가게명)" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/or_menu"
+                style="@style/gs_text_regular_14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#00000000"
-                android:textSize="14dp"
+                android:fontFamily="@font/nslight"
+                android:padding="4dp"
                 tools:text="메뉴 메뉴 메뉴 메뉴 메뉴 \n메뉴 메뉴 메뉴 메뉴" />
         </LinearLayout>
-
     </LinearLayout>
 </layout>
